update file input method and tune resource use

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ params {
     logdir = './'
     star_index = '/scratch/general/pe-nfs1/u0806040/A7659/Mouse_Human/star125_2.7.9a'
     gtf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.gtf'
+    screen_conf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/FastQ_Screen_Genomes/redwood_fastq_screen.conf'
     refflat = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.refflat'
     riboint = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.rRNA.interval'
 }
@@ -17,47 +18,47 @@ profiles {
             queue = 'hci-shared-rw'
             clusterOptions = '--account=hci-rw'
             cache = 'lenient'
-            //errorStrategy = { task.attempt < 2 ? 'retry' : 'finish' }
+            errorStrategy = { task.attempt < 2 ? 'retry' : 'finish' }
             scratch = '/scratch/general/pe-nfs1/u0806040/tmp'
             withName: dedup { 
                 time= 1.h
                 memory = 16.GB
-                cpus = 4
+                cpus = 8
             }
             withName: trim {
                 time= 1.h
-                memory = 8.GB
-                cpus = 4
+                memory = 4.GB
+                cpus = 8
             }
             withName: fastqscreen {
                 time= 1.h
-                memory = 8.GB
-                cpus = 4
+                memory = 4.GB
+                cpus = 8
             }
             withName: fastqc {
                 time= 1.h
-                memory = 4.GB
-                cpus = 4
+                memory = 2.GB
+                cpus = 1
             }
             withName: star {
                 time= 2.h
-                memory = 120.GB
-                cpus = 16
+                memory = 80.GB
+                cpus = 12
             }
             withName: filter_alignment {
                 time= 1.h
-                memory = 16.GB
-                cpus = 8
+                memory = 2.GB
+                cpus = 1
             }
             withName: feature_counts {
                 time= 1.h
-                memory = 16.GB
-                cpus = 8
+                memory = 1.GB
+                cpus = 6
             }
             withName: rnaseq_metrics {
                 time= 1.h
-                memory = 16.GB
-                cpus = 8
+                memory = 4.GB
+                cpus = 1
             }
 
         }   
