--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,6 @@
 params {
     fastq = "./fastq/*_R{1,2}_001.fastq.gz"
     outdir = './results'
-    logdir = './'
     star_index = '/scratch/general/pe-nfs1/u0806040/A7659/Mouse_Human/star125_2.7.9a'
     gtf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.gtf'
     screen_conf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/FastQ_Screen_Genomes/redwood_fastq_screen.conf'
@@ -68,13 +67,13 @@ profiles {
 // logging
 timeline {
     enabled = true
-    file = "${baseDir}/logs/timeline.html"
+    file = "${launchDir}/logs/timeline.html"
 }
 report {
     enabled = true
-    file = "${baseDir}/logs/report.html"
+    file = "${launchDir}/logs/report.html"
 }
 trace {
     enabled = true
-    file = "${baseDir}/logs/trace.txt"
+    file = "${launchDir}/logs/trace.txt"
 }
