set path for updated v104 combined reference

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@
 params {
     fastq = "./fastq/*_R{1,2}_001.fastq.gz"
     outdir = './results'
-    star_index = '/scratch/general/pe-nfs1/u0806040/A7659/Mouse_Human/star125_2.7.9a'
+    star_index = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Combined/Mouse_Human/GRCm39_hg38_v104_star125'
     gtf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.gtf'
     screen_conf = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/FastQ_Screen_Genomes/redwood_fastq_screen.conf'
     refflat = '/uufs/chpc.utah.edu/common/HIPAA/hci-bioinformatics1/atlatl/data/Human/GRCh38/release104/Homo_sapiens.GRCh38.104.refflat'
